# Simple_C_game

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sjump.c  square_jump
